listings/ch07-managing-growing-projects/listing-07-03/output.txt
$ cargo build
   Compiling restaurant v0.1.0 (file:///projects/restaurant)
error[E0603]: module `recepcion` is private
 --> src/lib.rs:9:28
  |
9 |     crate::fachada::recepcion::poner_en_espera();
  |                     ^^^^^^^^^ private module
  |
note: the module `recepcion` is defined here
 --> src/lib.rs:2:5
  |
2 |     mod recepcion {
  |     ^^^^^^^^^^^^^

error[E0603]: module `recepcion` is private
  --> src/lib.rs:12:21
   |
12 |     fachada::recepcion::poner_en_espera();
   |              ^^^^^^^^^ private module
   |
note: the module `recepcion` is defined here
  --> src/lib.rs:2:5
   |
2 |     mod recepcion {
  |     ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
error: could not compile `restaurant`

To learn more, run the command again with --verbose.
